src/global.scss
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import "~@ionic/angular/css/core.css";

/* Basic CSS for apps built with Ionic */
@import "~@ionic/angular/css/normalize.css";
@import "~@ionic/angular/css/structure.css";
@import "~@ionic/angular/css/typography.css";
@import '~@ionic/angular/css/display.css';

/* Optional CSS utils that can be commented out */
@import "~@ionic/angular/css/padding.css";
@import "~@ionic/angular/css/float-elements.css";
@import "~@ionic/angular/css/text-alignment.css";
@import "~@ionic/angular/css/text-transformation.css";
@import "~@ionic/angular/css/flex-utils.css";

@import '_colors';
@import '_utils';
@import '_fonts';

ion-header ion-toolbar.ios:first-child{
  padding-top: 0;
}

.custom-action-sheet{
  .action-sheet-title{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: var(--background);
    color: var(--ion-color-inria-blue);
    font-size: 18px;
    font-weight: 600;
    padding: 4vh 1em 2vh 1em;
  }
  .action-sheet-button.splitter{
    padding:0;
    height:1px;
  }
  .action-sheet-button:not(.splitter){
    background-image: none;
  }
  .action-sheet-button-inner{
    justify-content: left;
    color: #111;
  }

  .action-sheet-icon{
    margin-right: 18px !important;
  }

  .action-sheet-group-cancel{
    .action-sheet-button-inner{
      justify-content: center;
      color: var(--ion-color-inria);
    }
  }
}

.ion-page {
  background: white;
}

.bold{
  font-weight: 700;
}

.semibold{
  font-weight: 600;
}


// Reader
.reader .page-content, .about-content-wrapper, .preview-settings, .transcript{
  color: $inria-blue;

  video{
    height: 101%;
  }

  .vjs-poster{
    background-size: cover;
  }

  @for $i from 1 through 6 {
    h#{7 - $i} {
      font-size: pow(1.1, $i) * 1em;
      font-weight: 700;
      line-height: 1;
      color:$inria-blue;
      margin: 1em 0 .5em 0;
      padding: 0;
      text-transform: unset;
    }

    * + h#{7 - $i} {
      margin-top: 1em;
    }
  }

  p, ul, ol, table, pre, blockquote, video {
    margin: 1em 0 1em 0;
    text-align: justify;
  }

  ul, ol{
    padding-left: 1em;

    li{
      padding-bottom: .5em;
    }
  }

  figure {
    margin: 1em 0 1.5em 0;
    line-height: 1.4;
    color: $inria-blue;

    img{
      display: block;
      max-width: 100%;
      height: auto;
      margin: auto;
    }

    figcaption {
      font: italic smaller sans-serif;
      padding: 3px;
      text-align: center;
    }
  }

  blockquote {
    padding: 0 1em;
    border-left: .25em solid #dfe2e5;
  }

  table{
     position: relative;
     width:100%;
     text-align: left;
     border-collapse: collapse;

     thead{
       position: relative;

       &:before{
         content: '';
         width: 1em;
         height: 1em;
         position:absolute;
         top: -0.2em;
         left: -0.2em;
         background: $inria-red;
       }
     }

     th{
       position: relative;
       padding: .4em .4em .4em .4em;
       font-weight: 500;
       color:white;
       background: $inria-blue;
       border:none;
       z-index: 1;
     }

     td{
       padding: .4em .4em .4em .4em;
       border: 1px solid $inria-blue-border;
     }

     &.striped{
       tr:nth-of-type(2n+1){
         background: $inria-blue-bg;
       }
     }
   }
}

.transcript{
  padding: 1em;
}

